--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: java
 script: 
          - cd clarpse
-         - clean package assembly:single
+         - mvn clean package assembly:single
 after_success:
          - coveralls
