--- a/clarpse/pom.xml
+++ b/clarpse/pom.xml
@@ -7,8 +7,7 @@
 	<packaging>jar</packaging>
 	<version>1.0</version>
 	<properties>
-		<antlr4.plugin.version>4.5</antlr4.plugin.version>
-		<antlr4.version>4.5</antlr4.version>
+		<antlr4.version>4.5.3</antlr4.version>
 		<java-version>1.7</java-version>
 	</properties>
 
@@ -34,6 +33,7 @@
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 			<version>2.5.0</version>
+			<scope>test</scope>
 		</dependency>
 
 		<!-- Testing -->
@@ -55,30 +55,13 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.antlr</groupId>
-				<artifactId>antlr4-maven-plugin</artifactId>
-				<version> ${antlr4.plugin.version}</version>
+				<groupId>org.eluder.coveralls</groupId>
+				<artifactId>coveralls-maven-plugin</artifactId>
+				<version>4.1.0</version>
 				<configuration>
-					<arguments>
-						<argument>-visitor</argument>
-					</arguments>
+					<repoToken>AkNoP4tPKD7fEBdbkvkPaog4gSu8CoE2M</repoToken>
 				</configuration>
-				<executions>
-					<execution>
-						<goals>
-							<goal>antlr4</goal>
-						</goals>
-					</execution>
-				</executions>
 			</plugin>
-<plugin>
-    <groupId>org.eluder.coveralls</groupId>
-    <artifactId>coveralls-maven-plugin</artifactId>
-    <version>4.1.0</version>
-    <configuration>
-        <repoToken>AkNoP4tPKD7fEBdbkvkPaog4gSu8CoE2M</repoToken>
-    </configuration>
-</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -105,54 +88,54 @@
 				</configuration>
 			</plugin>
 			<plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.9</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-checkstyle-plugin</artifactId>
-                <version>2.9.1</version>
-                <executions>
-                    <execution>
-                        <id>checkstyle</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>check</goal>
-                        </goals>
-                        <configuration>
-                            <excludes>com/zir0/clarity/core/tests</excludes>
-                            <failOnViolation>true</failOnViolation>
-                            <configLocation>${project.basedir}/src/main/resources/clarityparsecheckstyleconfig.xml</configLocation>
-                            <violationSeverity>warning</violationSeverity>
-                            <consoleOutput>true</consoleOutput>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>findbugs-maven-plugin</artifactId>
-                <version>3.0.0</version>
-                <configuration>
-                    <!-- Enables analysis which takes more memory but finds more bugs. If 
-                        you run out of memory, changes the value of the effort element to 'Low'. -->
-                    <effort>default</effort>
-                    <!-- Reports all bugs (other values are medium and max) -->
-                    <threshold>low</threshold>
-                    <includeFilterFile>${project.basedir}/src/main/resources/findbugsexcludefilter.xml</includeFilterFile>
-                </configuration>
-                <executions>
-                    <!-- Ensures that FindBugs inspects source code when project is compiled. -->
-                    <execution>
-                        <id>analyze-compile</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>check</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.9</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-checkstyle-plugin</artifactId>
+				<version>2.9.1</version>
+				<executions>
+					<execution>
+						<id>checkstyle</id>
+						<phase>package</phase>
+						<goals>
+							<goal>check</goal>
+						</goals>
+						<configuration>
+							<excludes>com/zir0/clarity/core/tests</excludes>
+							<failOnViolation>true</failOnViolation>
+							<configLocation>${project.basedir}/src/main/resources/clarityparsecheckstyleconfig.xml</configLocation>
+							<violationSeverity>warning</violationSeverity>
+							<consoleOutput>true</consoleOutput>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>findbugs-maven-plugin</artifactId>
+				<version>3.0.0</version>
+				<configuration>
+					<!-- Enables analysis which takes more memory but finds more bugs. If 
+						you run out of memory, changes the value of the effort element to 'Low'. -->
+					<effort>default</effort>
+					<!-- Reports all bugs (other values are medium and max) -->
+					<threshold>low</threshold>
+					<includeFilterFile>${project.basedir}/src/main/resources/findbugsexcludefilter.xml</includeFilterFile>
+				</configuration>
+				<executions>
+					<!-- Ensures that FindBugs inspects source code when project is compiled. -->
+					<execution>
+						<id>analyze-compile</id>
+						<phase>package</phase>
+						<goals>
+							<goal>check</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 </project>
