--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ jdk:
   - oraclejdk8
 script: 
          - cd clarpse
+         - export MAVEN_OPTS="-Xmx3000m"
          - mvn clean package assembly:single
 after_success:
          - bash <(curl -s https://codecov.io/bash)
