--- a/clarpse/pom.xml
+++ b/clarpse/pom.xml
@@ -7,12 +7,15 @@
 	<packaging>jar</packaging>
 	<version>2.5.4</version>
 	<properties>
-		<antlr4.plugin.version>4.5.3</antlr4.plugin.version>
-		<antlr4.version>4.5.3</antlr4.version>
 		<java-version>1.8</java-version>
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>com.google.javascript</groupId>
+			<artifactId>closure-compiler</artifactId>
+			<version>v20160208</version>
+		</dependency>		
 		<dependency>
 			<!-- APACHE COMMONS -->
 			<groupId>org.apache.commons</groupId>
