--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ jdk:
   - oraclejdk8
 script: 
          - cd clarpse
-         - mvn clean package assembly:single deploy --settings settings.xml
+         - mvn clean package assembly:single
 after_success:
+         - mvn deploy --settings ../settings.xml -Dmaven.install.skip=true
          - bash <(curl -s https://codecov.io/bash)
