--- a/clarpse/pom.xml
+++ b/clarpse/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.clarityviews</groupId>
 	<artifactId>clarpse</artifactId>
 	<name>clarpse</name>
 	<packaging>jar</packaging>
-	<version>4.1.0</version>
+	<version>5.0.0</version>
 	<properties>
 		<java-version>1.8</java-version>
 	</properties>
@@ -15,7 +15,7 @@
 		<dependency>
 			<groupId>com.google.javascript</groupId>
 			<artifactId>closure-compiler</artifactId>
-			<version>v20170626</version>
+			<version>v20191111</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.antlr/antlr4-runtime -->
 		<!-- https://mvnrepository.com/artifact/com.tunnelvisionlabs/antlr4-runtime -->
@@ -46,12 +46,12 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.8.3</version>
+			<version>2.9.10.1</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.module</groupId>
 			<artifactId>jackson-module-afterburner</artifactId>
-			<version>2.8.3</version>
+			<version>2.10.2</version>
 		</dependency>
 		<!-- Testing -->
 		<dependency>
@@ -175,14 +175,15 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>findbugs-maven-plugin</artifactId>
-				<version>3.0.0</version>
+				<version>3.0.1</version>
 				<configuration>
 					<!-- Enables analysis which takes more memory but finds more bugs. If 
 						you run out of memory, changes the value of the effort element to 'Low'. -->
 					<effort>default</effort>
 					<!-- Reports all bugs (other values are medium and max) -->
 					<threshold>low</threshold>
-					<includeFilterFile>${project.basedir}/src/main/resources/findbugsexcludefilter.xml</includeFilterFile>
+					<includeFilterFile>${project.basedir}/src/main/resources/findbugsexcludefilter.xml
+					</includeFilterFile>
 				</configuration>
 				<executions>
 					<!-- Ensures that FindBugs inspects source code when project is compiled. -->
