--- a/clarpse/.gitignore
+++ b/clarpse/.gitignore
@@ -3,7 +3,7 @@ target/
 .idea/*
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
-
+clarpse.iml
 # User-specific stuff
 .idea/**/workspace.xml
 .idea/**/tasks.xml
