--- a/pom.xml
+++ b/pom.xml
@@ -41,26 +41,24 @@
 		<dependency>
 			<groupId>com.google.javascript</groupId>
 			<artifactId>closure-compiler</artifactId>
-			<version>v20191111</version>
+			<version>v20210302</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.tunnelvisionlabs/antlr4-runtime -->
 		<dependency>
 			<groupId>com.tunnelvisionlabs</groupId>
 			<artifactId>antlr4-runtime</artifactId>
 			<version>4.3</version>
 		</dependency>
-		<dependency>
-			<groupId>com.tunnelvisionlabs</groupId>
-			<artifactId>antlr4-maven-plugin</artifactId>
-			<version>4.3</version>
-		</dependency>
+
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 			<version>3.4</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.github.javaparser/javaparser-symbol-solver-core -->
 		<dependency>
 			<groupId>com.github.javaparser</groupId>
-			<artifactId>javaparser-core</artifactId>
+			<artifactId>javaparser-symbol-solver-core</artifactId>
 			<version>3.16.1</version>
 		</dependency>
 		<dependency>
@@ -69,15 +67,20 @@
 			<version>2.10.0.pr1</version>
 		</dependency>
 		<dependency>
-			<groupId>com.fasterxml.jackson.module</groupId>
-			<artifactId>jackson-module-afterburner</artifactId>
-			<version>2.8.8</version>
-		</dependency>
-		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.13.1</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>2.13.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.13.0</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
