--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<url>https://github.com/hadii-tech/clarpse</url>
 
 	<properties>
-		<java-version>1.8</java-version>
+		<java.version>11</java.version>
 	</properties>
 
 	<licenses>
@@ -148,7 +148,7 @@
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.7.5.201505241946</version>
+				<version>0.8.8</version>
 				<executions>
 					<execution>
 						<goals>
@@ -169,8 +169,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>11</source>
+					<target>11</target>
 					<compilerArgument>-Xlint:all</compilerArgument>
 					<showWarnings>true</showWarnings>
 					<showDeprecation>true</showDeprecation>
@@ -213,20 +213,21 @@
 				</executions>
 			</plugin>
 			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>findbugs-maven-plugin</artifactId>
-				<version>3.0.4</version>
+				<groupId>com.github.spotbugs</groupId>
+				<artifactId>spotbugs-maven-plugin</artifactId>
+				<version>4.7.3.0</version>
 				<configuration>
-					<!-- Enables analysis which takes more memory but finds more bugs. If
-						you run out of memory, changes the value of the effort element to 'Low'. -->
-					<effort>default</effort>
-					<!-- Reports all bugs (other values are medium and max) -->
-					<threshold>low</threshold>
-					<includeFilterFile>${project.basedir}/src/main/resources/findbugsexcludefilter.xml
-					</includeFilterFile>
+					<excludeFilterFile>src/main/resources/spotbugs_exclude.xml</excludeFilterFile>
 				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>com.github.spotbugs</groupId>
+						<artifactId>spotbugs</artifactId>
+						<version>4.7.3</version>
+					</dependency>
+				</dependencies>
 				<executions>
-					<!-- Ensures that FindBugs inspects source code when project is compiled. -->
+					<!-- Ensures that Spotbugs inspects source code when project is compiled. -->
 					<execution>
 						<id>analyze-compile</id>
 						<phase>package</phase>
